# AI-Knowledge-Assistant

./: .env.example  .gitignore  README.md  pyproject.toml  start.bat  test_stream.py
app/: __init__.py  main.py
app/agents/: __init__.py  graph.py  rag_agent.py
app/api/: __init__.py  deps.py  router.py
app/api/v1/: __init__.py
app/api/v1/endpoints/: chat.py  health.py  knowledge.py  session.py
app/core/: __init__.py  config.py  logging.py
app/data_processing/: __init__.py  chunker.py  loader.py
app/db/: session.py
app/models/: chat_session.py
app/schemas/: __init__.py  agent_state.py  chat.py  common.py  knowledge.py
app/services/: __init__.py  llm.py  vector_store.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  main.js
frontend/src/components/: AppSidebar.vue  ChatMessage.vue  FileUpload.vue
frontend/src/composables/: useApi.js
frontend/src/router/: index.js
frontend/src/styles/: main.css
frontend/src/views/: ChatView.vue  DashboardView.vue  KnowledgeView.vue
